<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/shape_bangumi_dialog"
    android:orientation="vertical"
    android:paddingStart="20dp"
    android:paddingTop="18dp"
    android:paddingEnd="20dp"
    android:paddingBottom="10dp">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="17sp"
        android:textStyle="bold"
        tools:text="@string/bangumi_bind_title" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:lineSpacingExtra="3dp"
        android:textColor="@color/white_90"
        android:textSize="14sp"
        tools:text="@string/bangumi_bind_message" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:gravity="end"
        android:orientation="horizontal">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:padding="10dp"
            android:text="@string/dialog_cancel"
            android:textColor="@color/white_70"
            android:textSize="15sp" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:background="?attr/selectableItemBackground"
            android:padding="10dp"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:textStyle="bold"
            tools:text="@string/bangumi_bind_confirm" />

    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.appcompat.widget.LinearLayoutCompat>
